<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/toolbar_layout"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_8"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/label_auto_wallpager"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14"/>
                <Switch
                    android:id="@+id/switch_setting_wallpager"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/wallpager_setting_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_wallpager_keyword"
                    android:textSize="@dimen/sp_10"
                    android:textColor="@color/grey31"
                    android:layout_marginTop="@dimen/dp_16"/>
                <EditText
                    android:id="@+id/input_keyword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_wallpager_keyword_hint"
                    android:textColorHint="@color/grey71"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_10"
                    android:paddingTop="@dimen/dp_12"
                    android:paddingBottom="@dimen/dp_16"
                    android:inputType="text"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_wallpager_update_interval"
                    android:textSize="@dimen/sp_10"
                    android:textColor="@color/grey31"
                    android:layout_marginTop="@dimen/dp_6"/>
                <EditText
                    android:id="@+id/input_interval_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_wallpager_update_interval_hint"
                    android:textColorHint="@color/grey71"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_10"
                    android:paddingTop="@dimen/dp_12"
                    android:paddingBottom="@dimen/dp_16"
                    android:inputType="number"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_wallpager_network_type"
                    android:textSize="@dimen/sp_10"
                    android:textColor="@color/grey31"
                    android:layout_marginTop="@dimen/dp_6"/>
                <RadioGroup
                    android:id="@+id/group_network_types"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_6"
                    android:paddingTop="@dimen/dp_6"
                    android:paddingBottom="@dimen/dp_6"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/radio_network_any"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="@string/label_network_any"
                        android:textSize="@dimen/sp_10"
                        android:textColor="@color/colorAccent"/>
                    <RadioButton
                        android:id="@+id/radio_network_wifi"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="@string/label_network_wifi"
                        android:textSize="@dimen/sp_10"
                        android:textColor="@color/colorAccent"/>
                </RadioGroup>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_wallpager_crop"
                    android:textSize="@dimen/sp_10"
                    android:textColor="@color/grey31"
                    android:layout_marginTop="@dimen/dp_6"/>
                <RadioGroup
                    android:id="@+id/group_wallpager_sizes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_6"
                    android:paddingTop="@dimen/dp_6"
                    android:paddingBottom="@dimen/dp_6"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/radio_size_original"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="@string/label_pic_original"
                        android:textSize="@dimen/sp_10"
                        android:textColor="@color/colorAccent"/>
                    <RadioButton
                        android:id="@+id/radio_size_resolution"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="@string/label_pic_resolution"
                        android:textSize="@dimen/sp_10"
                        android:textColor="@color/colorAccent"/>
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>